# ComputeRayTracingAndDenoising

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.ch.md  README.md  bootstrap.bat  build.bat  build.sh  compile_and_run.bat  compile_shader.bat  compile_shader_cpp.bat  imgui.ini  testing.cpp  xmake.lua
dep/: CMakeLists.txt
dep/glfw/Debug/: glfw3.lib
dep/imgui/backends/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
dep/memory-allocator-hpp/: vk_mem_alloc.h
dep/obj-loader/: tiny_obj_loader.h
dep/ogt-tools/: ogt_vox.h
dep/stb-image/: stb_image.h
dep/vk-bootstrap/src/: VkBootstrap.cpp  VkBootstrap.h  VkBootstrapDispatch.h
dep/volk/: README.md  volk.c  volk.h
dep/vulkan-memory-allocator/: vk_mem_alloc.h
dep/x/Release/: glfw3.lib
src/: Application.cpp  Application.h  Application.hpp  CMakeLists.txt  main.cpp
src/AppContext/: VulkanApplicationContext.cpp  VulkanApplicationContext.h
src/AppContext/ContextCreators/: Common.h  DeviceCreator.cpp  InstanceCreator.cpp  InstanceCreator.h  SurfaceCreator.cpp  SwapchainCreator.cpp  SwapchainCreator.h
src/app-context/: CMakeLists.txt  VulkanApplicationContext.cpp  VulkanApplicationContext.h  VulkanApplicationContext.hpp  VulkanGlobal.h  VulkanSwapchain.cpp  VulkanSwapchain.h
src/app-context/context-creators/: Common.h  Common.hpp  ContextCreators.hpp  DeviceCreator.cpp  DeviceCreator.h  DeviceCreator.hpp  InstanceCreator.cpp  InstanceCreator.h  InstanceCreator.hpp  SurfaceCreator.cpp  SurfaceCreator.h  SurfaceCreator.hpp  SwapchainCreator.cpp  SwapchainCreator.h  SwapchainCreator.hpp
src/application/: Application.cpp  Application.hpp  BlockState.hpp  BrushData.cpp  BrushData.hpp  CMakeLists.txt
src/application/svo-builder/: SvoBuilder.cpp  SvoBuilder.hpp  SvoBuilderDataGpu.hpp  VoxLoader.cpp
src/application/svo-tracer/: SvoTracer.cpp  SvoTracer.hpp  SvoTracerDataGpu.hpp  SvoTracerTweakingData.cpp  SvoTracerTweakingData.hpp  SvoTracerTwickingData.cpp  SvoTracerTwickingData.hpp
src/camera/: CMakeLists.txt  Camera.cpp  Camera.hpp  ShadowMapCamera.cpp  ShadowMapCamera.hpp
src/config-container/: CMakeLists.txt  ConfigContainer.cpp  ConfigContainer.hpp
src/config-container/sub-config/: AtmosInfo.cpp  AtmosInfo.hpp  BrushInfo.cpp  BrushInfo.hpp  CameraInfo.cpp  CameraInfo.hpp  ImguiManagerInfo.cpp  ImguiManagerInfo.hpp  PostProcessingInfo.cpp  PostProcessingInfo.hpp  ShadowMapCameraInfo.cpp  ShadowMapCameraInfo.hpp  SvoBuilderInfo.cpp  SvoBuilderInfo.hpp  SvoTracerInfo.cpp  SvoTracerInfo.hpp  SvoTracerTweakingInfo.cpp  SvoTracerTweakingInfo.hpp
src/custom-mem-alloc/: CMakeLists.txt  CustomMemoryAllocator.cpp  CustomMemoryAllocator.hpp  CustomMemoryPool.cpp  CustomMemoryPool.hpp
src/file-watcher/: CMakeLists.txt  ShaderChangeListener.cpp  ShaderChangeListener.hpp  ShaderFileWatchListener.cpp  ShaderFileWatchListener.hpp
src/gui/gui-elements/: FpsGui.cpp  FpsGui.hpp
src/gui/gui-manager/: ImGuiManager.cpp  ImGuiManager.hpp  ImguiManager.cpp  ImguiManager.hpp
src/imgui/: imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
src/imgui-manager/: CMakeLists.txt
src/imgui-manager/gui-elements/: FpsGui.cpp  FpsGui.hpp
src/imgui-manager/gui-manager/: ImguiManager.cpp  ImguiManager.hpp
src/imgui-manager/imgui-backends/: imgui_impl_vulkan.h
src/large-buffer-storage/: LargeBufferStorage.cpp  LargeBufferStorage.hpp
src/material/: ComputeMaterial.cpp  ComputeMaterial.hpp  ComputeModel.hpp  ComputePipeline.cpp  ComputePipeline.hpp  DescriptorSetBundle.cpp  DescriptorSetBundle.hpp  Material.cpp  Material.hpp  Pipeline.cpp  Pipeline.hpp
src/memory/: Buffer.cpp  Buffer.h  Buffer.hpp  BufferBundle.hpp  Image.cpp  Image.h  Image.hpp  ImageUtils.cpp  ImageUtils.h
src/pipeline/: ComputePipeline.cpp  ComputePipeline.hpp  DescriptorSetBundle.cpp  DescriptorSetBundle.hpp  Pipeline.cpp  Pipeline.hpp
src/pipelines/: ComputePipeline.cpp  ComputePipeline.hpp  DescriptorSetBundle.cpp  DescriptorSetBundle.hpp  Pipeline.cpp  Pipeline.hpp
src/ray-tracing/: Bvh.cpp  Bvh.h  Bvh.hpp  GpuModels.h  GpuModels.hpp  RtScene.cpp  RtScene.h  RtScene.hpp
src/render-context/: FlatRenderPass.cpp  FlatRenderPass.h  ForwardRenderPass.cpp  ForwardRenderPass.h  RenderPass.h  RenderSystem.cpp  RenderSystem.h  RenderSystem.hpp
src/scene/: ComputeMaterial.cpp  ComputeMaterial.h  ComputeMaterial.hpp  ComputeModel.cpp  ComputeModel.h  ComputeModel.hpp  DrawableModel.cpp  DrawableModel.h  Material.cpp  Material.h  Material.hpp  Mesh.cpp  Mesh.hpp  Scene.cpp  Scene.h  mesh.cpp  mesh.h
src/scheduler/: Scheduler.hpp
src/shaders/: aTrous.comp  backgroundBlit.comp  chunkFieldConstruction.comp  chunkVoxelCreation.comp  chunksBuilder.comp  chunksTracing.comp  octreeAllocNode.comp  octreeInitNode.comp  octreeLastModifyArg.comp  octreeModifyArg.comp  octreeTagNode.comp  postProcessing.comp  stratumFilter.comp  svoCoarseBeam.comp  svoTracing.comp  temporalFilter.comp  test.comp  testing.comp  trisTracing.comp  variance.comp
src/shaders/include/: colorPacker.glsl  definitions.glsl  interpolation.glsl  packer.glsl  perlinNoise.glsl  projection.glsl  (+6 more)
src/svo-builder/: SvoBuilder.cpp  SvoBuilder.hpp  SvoBuilderBufferStructs.hpp  SvoBuilderDataGpu.hpp  VoxData.hpp  VoxLoader.cpp  VoxLoader.hpp
src/svo-ray-tracing/: SvoBuilder.cpp  SvoBuilder.hpp  SvoGpuModel.hpp  SvoScene.cpp  SvoScene.hpp
src/svo-tracer/: SvoTracer.cpp  SvoTracer.hpp  SvoTracerDataGpu.hpp  SvoTracerTwickingData.cpp  SvoTracerTwickingData.hpp  SvoTracerUboData.hpp
src/tris-ray-tracing/: Bvh.hpp  GpuModels.hpp  RtScene.cpp  TrisGpuModel.hpp  TrisScene.cpp  TrisScene.hpp
src/utils/: Camera.cpp  Camera.h  Camera.hpp  Logger.hpp  Readfile.hpp  RootDir.h  RootDir.h.in  StbImageImpl.cpp  StbImageImpl.h  Vulkan.hpp  Window.cpp  Window.h  debug.h  glm.h  logger.cpp  logger.h  readfile.h  systemLog.h  vulkan.h
src/vulkan-wrapper/: CMakeLists.txt
src/window/: CMakeLists.txt  CursorInfo.hpp  FullscreenWindow.h  HoverWindow.h  MaximizedWindow.h  MouseInfo.hpp  Window.cpp  Window.h  Window.hpp
(+212 files in other folders)
