add_subdirectory(app-context/)
add_subdirectory(application/)
add_subdirectory(file-watcher/)
add_subdirectory(gui/)
add_subdirectory(memory/)
add_subdirectory(pipeline/)
add_subdirectory(scheduler/)
add_subdirectory(svo-builder/)
add_subdirectory(svo-tracer/)
add_subdirectory(utils/)
add_subdirectory(window/)